--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,9 @@
-keras==2.4.1
-importlib_metadata==3.4.0
-zipp==3.4.0
-lxml==4.6.3
+Keras==2.4.1
 streamlit==0.79.0
 cvlib==0.2.6
-Cython==0.29.22
-typing_extensions==3.7.4.3
 opencv_python_headless==4.5.1.48
-numpy==1.19.5
-pywin32==225
-docutils==0.16
-brotli==1.0.9
-cryptography==3.4.7
-keyring==23.0.1
-lockfile==0.12.2
-ordereddict==1.1
+numpy==1.19.
 Pillow==8.1.2
-protobuf==3.15.6
-pyOpenSSL==20.0.1
-wincertstore==0.2
 tensorflow==2.4.1
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
